<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_usuario"
            android:textColor="@color/nav_item_text_color_selector"
            android:title="@string/editProfile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:textColor="@color/nav_item_text_color_selector"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_createplan"
            android:icon="@drawable/ic_createplan"
            android:textColor="@color/nav_item_text_color_selector"
            android:title="@string/createplan" />
        <item
            android:id="@+id/nav_manusu"
            android:icon="@drawable/ic_manusu"
            android:textColor="@color/nav_item_text_color_selector"
            android:title="@string/manusu" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_logout"
            android:textColor="@color/nav_item_text_color_selector"
            android:title="@string/exit" />

    </group>
</menu>

    <!--android:checked="true"-->