<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fragments.EditProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".EditProfile">

            <ImageView
                android:id="@+id/ivuser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="80dp"
                android:scaleType="centerCrop"
                android:background="@drawable/circleiv"
                android:src="@drawable/cara"
                app:layout_constraintEnd_toEndOf="@id/rightguide"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="@id/leftguide"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@id/rightguide"
                app:layout_constraintStart_toStartOf="@id/leftguide"
                app:layout_constraintTop_toBottomOf="@id/ivuser"
                app:hintTextColor="@color/secondary_dark">

                <EditText

                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:theme="@style/lineET" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etsurname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@id/rightguide"
                app:layout_constraintStart_toStartOf="@id/leftguide"
                app:layout_constraintTop_toBottomOf="@id/etname"
                app:hintTextColor="@color/secondary_dark">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/surname"
                    android:theme="@style/lineET"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ettelf"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@id/rightguide"
                app:layout_constraintStart_toStartOf="@id/leftguide"
                app:layout_constraintTop_toBottomOf="@id/etsurname"
                app:hintTextColor="@color/secondary_dark">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/telefono"
                    android:theme="@style/lineET"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etemail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@id/rightguide"
                app:layout_constraintStart_toStartOf="@id/leftguide"
                app:layout_constraintTop_toBottomOf="@id/ettelf"
                app:hintTextColor="@color/secondary_dark">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:theme="@style/lineET"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/etpassword"-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="12dp"-->
<!--                app:layout_constraintEnd_toEndOf="@id/rightguide"-->
<!--                app:layout_constraintStart_toStartOf="@id/leftguide"-->
<!--                app:layout_constraintTop_toBottomOf="@id/etemail"-->
<!--                app:hintTextColor="@color/secondary_dark">-->

<!--                <EditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:editable="false"-->
<!--                    android:hint="@string/pass"-->
<!--                    android:inputType="none"-->
<!--                    android:theme="@style/lineET" />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etdescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@id/rightguide"
                app:layout_constraintStart_toStartOf="@id/leftguide"
                app:layout_constraintTop_toBottomOf="@id/etemail"
                app:hintTextColor="@color/secondary_dark">

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/description"
                    android:theme="@style/lineET"
                    android:text="@string/textLarge" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btncancel"
                android:layout_width="150dp"
                style="@style/buttonOutlinedRed"
                android:backgroundTint="@color/button_selector"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/cancel"
                app:layout_constraintStart_toStartOf="@id/leftguide"
                app:layout_constraintTop_toBottomOf="@id/etdescription"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/btnsave"
                style="@style/buttonOutlinedRed"
                android:layout_width="150dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/button_selector"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/rightguide"
                app:layout_constraintTop_toBottomOf="@id/etdescription"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/btncancel" />


            <Button
                android:id="@+id/btnlogout"
                android:layout_width="150dp"
                style="@style/buttonOutlinedRed"
                android:backgroundTint="@color/button_selector"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/logout"
                app:layout_constraintStart_toStartOf="@id/leftguide"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnDeleteAccount"
                style="@style/buttonOutlinedRed"
                android:layout_width="150dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/button_selector"
                android:text="@string/deleteaccount"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@id/rightguide"

                app:layout_constraintHorizontal_bias="1.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftguide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightguide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>